# DotNetCoreProfiler

./: .dockerignore  .gitignore  .travis.yml  4b079feeb4ee.txt  Dockerfile.core  Dockerfile.generator21  Dockerfile.integrationtests-1interceptor  Dockerfile.integrationtests-2interceptors  Dockerfile.interception  Dockerfile.interception21  Dockerfile.interception31  Dockerfile.llvm  Dockerfile.native  Dockerfile.native.nuget  Dockerfile.sampleapp  Dockerfile.sampleapp21  Dockerfile.sampleapp31  Dockerfile.wrapper  LICENSE  README.md  TODO.md  devenv.md  docker-compose.21.yml  docker-compose.31.yml  docker-compose.jaeger.yml  docker-compose.prometheus.protobuf.yml  docker-compose.prometheus.yml  docker-compose.yml  interception.json  package.json  profiler.nuspec
demo/: build.sh
demo/app/: Program.cs
demo/interceptor/: MyFuncInterceptor.cs  interceptor.csproj  skip.txt
grafana/: Dockerfile
k8s/: Readme.md
k8s/monitoring-mutator/: Dockerfile  Readme.md  build-image.sh  go.mod  go.sum  main.go  values.yml
k8s/sample/: Dockerfile  Dockerfile.interceptor  Readme.md  minikube-mutator.yml  pod.yml  pv.yml  resp.json  sample-mutator.yml  test.yml
logstash/: Dockerfile  template.json
prometheus/: Dockerfile  alert-rules.yml  entrypoint.sh  prometheus.yml
prometheus/rule-generator/: alert-rules.yml  rule-generator.yml
sample/: Globals.cs  ILInstruction.cs  Program.cs  SDILReader.cs  SampleApp.csproj  SampleApp.sln  Startup.cs  StateMachine.cs  TestClass.cs
sample/2.1/: ITestC.cs  Program.cs  SampleApp.csproj  SampleApp.sln  Startup.cs  TestC.cs
sample/3.1/: Program.cs  SampleApp.sln
sample/Controllers/: ValuesController.cs
sample/Database/: DatabaseConfiguration.cs  MyDbContext.cs
sample/MessageBus/: Executor.cs  MyMessageConsumer.cs
sample/Migrations/: 20200118201634_Initial.Designer.cs
sample/Properties/: launchSettings.json
sample/Redis/: RedisSubscriber.cs
sample/SampleApp/: SampleApp.csproj  Startup.cs
sample/ScheduledJobs/: JobFactory.cs  SampleJob.cs  SchedulerService.cs
samples/: Dockerfile.interception  Dockerfile.sampleapp  Readme.md  SampleApp.sln  docker-compose.jaeger.yml  docker-compose.prometheus.protobuf.yml  docker-compose.prometheus.yml  skip.txt
samples/Interception/: Interception.csproj  Interception21.csproj  Interception31.csproj  MonitoringInterceptor.cs
samples/Microsoft.Extensions.Caching.StackExchangeRedis/: Microsoft.Extensions.Caching.StackExchangeRedis.csproj  RedisCacheOptions.cs
samples/Zold/: Dockerfile.interception  docker-compose.jaeger.yml
samples/attributed/: Dockerfile
samples/cache/: Dockerfile  docker-compose.yml
samples/deadlock-detection/: Dockerfile
samples/efcore/: Dockerfile  docker-compose.yml
samples/grafana/: Dockerfile
samples/http/: Dockerfile  docker-compose.yml
samples/http_metricproxy/: Dockerfile  docker-compose.yml
samples/http_metricproxy_tcp/: Dockerfile  docker-compose.yml
samples/http_metricproxy_udp/: Dockerfile  docker-compose.yml  run.sh
samples/http_metricproxy_uds/: Dockerfile  docker-compose.yml
samples/http_statsd/: Dockerfile  docker-compose.yml
samples/methodfinder/: Dockerfile
src/: Dockerfile.core  Dockerfile.llvm  Dockerfile.metricproxy
src/profiler/: AssemblyInfo.cpp  AssemblyInfo.h  CMakeLists.txt  ClassFactory.cpp  ClrProfiler.def  ComPtr.h  Configuration.cpp  Configuration.h  CorProfiler.cpp  CorProfiler.h  Dockerfile  Dockerfile.nuget  FunctionInfo.cpp  FunctionInfo.h  ILRewriter.cpp  ILRewriter.h  ILRewriterHelper.h  ImportInterception.h  Initializer.h  Interception.cpp  Interception.h  Interceptor.h  MethodArgument.cpp  MethodArgument.h  MethodSignature.cpp  MethodSignature.h  ModuleInfo.cpp  ModuleInfo.h  Resource.aps  Resource.rc  TargetMethod.h  TypeInfo.cpp  TypeInfo.h  WrapperAssembly.h  clr_const.h  dllmain.cpp  dllmain.h  fmt.cmake  helpers.cpp  helpers.h  (+9 more)
src/profiler/configuration/: AssemblyInizializer.h  AttributedInterceptor.h  BaseClass.h  Configuration.cpp  Configuration.h  DefaultInitializerInfo.h  ExceptionLoggerInfo.h  ImportInterception.h  InstrumentationConfiguration.h  Interception.h  InterceptionInfo.h  Interceptor.h  InterceptorMethodInfo.h  LoaderInfo.h  MethodFinder.h  StrictInterception.h  TargetMethod.h  TraceMethodInfo.h  TypeInfo.h  back_inserter.h
src/profiler/const/: const.h
src/profiler/fmt/: fmt.h
src/profiler/info/: AssemblyInfo.cpp  AssemblyInfo.h  FunctionInfo.cpp  FunctionInfo.h  GenericMethodSignature.cpp  GenericMethodSignature.h  InterceptionVarInfo.h  MethodArgument.cpp  MethodArgument.h  MethodArgumentTypeFlag.h  MethodSignature.cpp  MethodSignature.h  ModuleInfo.cpp  ModuleInfo.h  TypeInfo.cpp  TypeInfo.h  parser.cpp  parser.h
src/profiler/logging/: JsonFormatter.cpp  JsonFormatter.h  logging.cpp  logging.h  util.cpp  util.h
src/profiler/miniutf/: miniutf.hpp
src/profiler/profiler/: CachedAssembly.h  CachedType.h  CorProfiler.DumpILCodes.cpp  CorProfiler.JITCompilationStarted.cpp  CorProfiler.ModuleLoadFinished.cpp  CorProfiler.Rejit.cpp  CorProfiler.cpp  CorProfiler.h  MethodRewriter.BeginTracing.cpp  MethodRewriter.CreateAfterMethod.cpp  MethodRewriter.CreateBeforeMethod.cpp  MethodRewriter.Debugger.cpp  MethodRewriter.EndTracing.cpp  MethodRewriter.InitLocalValues.cpp  MethodRewriter.LocalVariables.cpp  MethodRewriter.LogInterceptorException.cpp  MethodRewriter.ModifyArguments.cpp  MethodRewriter.TryCatch.cpp  MethodRewriter.cpp  MethodRewriter.h  RejitInfo.h
src/profiler/rewriter/: ILRewriter.cpp  ILRewriter.h  ILRewriterHelper.cpp  ILRewriterHelper.h  readme.md
src/profiler/util/: ComPtr.h  clr_const.h  helpers.cpp  helpers.h  types.h  util.cpp  util.h
tests/Profiler.Native.Tests/: AssemblyInfoTests.cpp  CMakeLists.txt  ConfigurationTests.cpp  CorProfilerInjectLoadMethodTests.cpp  CorProfilerTests.cpp  Dockerfile  EnableGoogleTest.cmake  EnableGoogleTest.cmake.in  ModuleInfoTests.cpp  ParserTests.cpp  Profiler.Native.Tests.vcxproj  Profiler.Native.Tests.vcxproj.filters  PureICorProfilerInfo8Impl.h  dummy.cpp  main.cpp  mocks.cpp  mocks.h  packages.config  pch.h
(+538 files in other folders)
